--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,9 +3,12 @@
     padding: 0;
 }
 
-.bg-blue {
-    background-color: rgb(3, 85, 204);
+:root {
+    --bg-blue: background-color: rgb(3, 85, 204);
+
+
 }
+
 
 body {
     width: 100%;
@@ -87,8 +90,6 @@ span {
     padding: 10px 20px;
     color: #fff;
     font-size: 20px;
-    /* border-top: 10px solid red;
-    border-bottom: 10px solid red; */
     border: none;
     border-radius: 10px;
     cursor: pointer;
@@ -96,7 +97,7 @@ span {
 
 .btn:hover {
     background-color: rgb(193, 126, 1);
-    color: blue;
+    color: white;
 }
 
 .btn i {
@@ -118,14 +119,6 @@ span {
     width: 100%;
 
     padding-top: 50px;
-}
-
-.section-1 {
-    display: flex;
-    gap: 30px;
-    justify-content: space-between;
-    align-items: center;
-    /* height: 400px; */
 }
 
 .section-1-left {
@@ -155,18 +148,14 @@ span {
     background-color: rgb(228, 99, 0);
 }
 
-.section-1-right {
-    width: 50%;
-}
+
 
 .section-1-right img {
     width: 100%;
 }
 
 .section-2 {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+
     gap: 20px;
     margin-top: -100px;
     z-index: 100;
@@ -214,9 +203,7 @@ span {
 }
 
 .about_us_content {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+
     gap: 30px
 }
 
@@ -243,9 +230,7 @@ span {
 }
 
 .sec {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+
     gap: 30px;
 }
 
@@ -254,10 +239,7 @@ span {
 }
 
 .sec4-c {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+
     gap: 20px;
 }
 
@@ -266,10 +248,7 @@ span {
 }
 
 .sec4-boxes {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
+
     gap: 18px;
 }
 
@@ -298,18 +277,12 @@ span {
 }
 
 .sec5-c {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+
     gap: 30px;
 }
 
 .sec5-boxes {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+
     gap: 20px;
 }
 
@@ -377,10 +350,6 @@ span {
 }
 
 .form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: start;
     gap: 20px;
 }
 
@@ -405,30 +374,29 @@ span {
     text-align: center;
     gap: 50px;
     padding: 50px 0;
+    color: #fff;
 
 }
 
 .foot h2 {
     font-weight: 550;
     margin-bottom: 30px;
-    color: #fff;
+
 }
 
 .foot p {
     margin-top: 10px;
     font-size: 14px;
-    color: #fff;
+
 }
 
 .foot i {
-    color: #fff;
+
     font-size: 24px;
 }
 
 .contact-row {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+
     flex-wrap: wrap;
     gap: 20px;
 
